Refactor frontend structure and add modular JS for start page
Moved HTML and static assets out of the UYES-Frontend directory and updated backend routes and static serving paths accordingly. Refactored startSite.html to use buttons with JavaScript event listeners instead of anchor tags for navigation, and added modular scripts (index.js, startSite.js, utils/intros.js) to handle intro logic and menu navigation. Updated package.json to include start and dev scripts with nodemon for development.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "UYES is a round-based web game that takes inspiration from the famous card game UNO!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/Fortgeschrittene-Informatik-Portfolio/UYES-Frontend#readme",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
