Add express-session and persist session data

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/Fortgeschrittene-Informatik-Portfolio/UYES-Frontend#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
