--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.18.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1"
   }
 }
