--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "cookie-parser": "^1.4.6",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "socket.io": "^4.8.1"
+    "nodemon": "^3.1.10"
   }
 }
