--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "homepage": "https://github.com/Fortgeschrittene-Informatik-Portfolio/UYES-Frontend#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
