--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "dotenv": "^17.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
