--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # Copy this file to `.env` and adjust values as needed
 
 # Server port
+# Change this value if deploying to a server that uses a different port
 PORT=5000
 
 # Secret used to sign JWT cookies
