--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.0",
     "socket.io": "^4.8.1",
-    "dotenv": "^17.1.0"
+    "dotenv": "^17.1.0",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
