--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Fortgeschrittene-Informatik-Portfolio/UYES-Frontend/issues"
   },
@@ -26,7 +26,6 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
-    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.0",
     "socket.io": "^4.8.1"
   },
